# solomon

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh
bench/: Cargo.toml  main.rs
bench/binsearch/: prog.c  prog.hc
bench/collatz/: prog.c  prog.hc
bench/fib/: prog.c  prog.hc
bench/fib_rec/: prog.hc
bench/gcd_grid/: prog.c  prog.hc
bench/lcs/: prog.hc
bench/matmul/: prog.hc
bench/popcount/: prog.c  prog.hc
bench/primes_trial/: prog.c  prog.hc
bench/quicksort/: prog.c  prog.hc
bench/sieve/: prog.hc
bench/strhash/: prog.hc
bench/xorshift/: prog.hc
hcc/: Cargo.toml
hcc/src/: ast.rs  intrinsics.rs  ir.rs  lib.rs  main.rs  oracle.rs  token.rs
hcc/src/backend/: analysis.rs  cse.rs  dce.rs  idiom.rs  inline.rs  ivsr.rs  licm.rs  mod.rs  regalloc.rs  simplify.rs
hcc/src/backend/arm64/: asm.rs  isel.rs  linux.rs  mod.rs
hcc/src/backend/tests/: backend.rs  cse.rs  dce.rs  idiom.rs  inline.rs  regalloc.rs  simplify.rs
hcc/src/backend/x86_64/: asm.rs  isel.rs  linux.rs  mod.rs  windows.rs
hcc/src/frontend/: layout.rs  lexer.rs  lower.rs  mono.rs  parser.rs  preproc.rs  sema.rs
hcc/src/frontend/tests/: layout.rs  lexer.rs  lower.rs  mono.rs  parser.rs  preproc.rs  sema.rs
hcc/src/tests/: oracle.rs
hcc/tests/: conform.rs
hcc/tests/conform/args/: echo.hc
hcc/tests/conform/arithmetic/: add_byone.hc  add_byone.out  add_larger.hc  add_negatives.hc  add_powers.hc  add_small.hc  and_byone.hc  and_larger.hc  and_negatives.hc  and_negatives.out  and_powers.hc  and_powers.out  (+72 more)
hcc/tests/io/: cwd_invariants.hc  cwd_root.hc  env_invariants.hc  env_lookup.hc  environ.hc  file.hc  fsops.hc  getenv_lookup.hc  getenv_unset.hc  getpid.hc  ids.hc  main.rs  open_error.hc  stdwrite.hc
hcc/tests/net/: echo.hc  main.rs
hcc/tests/proc/: main.rs  system.hc
hcc/tests/stdlib/: abs.hc  cheap_cleanups.hc  errno.hc  fgets.hc  generic_type_switch.hc  generic_value_param.hc  getchar.hc  if_type.hc  limits.hc  main.rs  math_bessel.hc  math_classification.hc  math_erf_gamma.hc  math_extended.hc  math_go_style.hc  math_rounding.hc  math_transcendentals.hc  min_max.hc  msize.hc  rand_seed.hc  readline.hc  realloc.hc  sscan.hc  strftime.hc  string_workhorses.hc  strnprint.hc  strsep.hc  strtof64.hc  strtoi64base.hc  strtoul_strtof64.hc  time_calendar.hc  time_difftime.hc  vec.hc
hcc/tests/structural/: arith.hc  call.hc  class.hc  exceptions.hc  float.hc  global_bss.hc  ifdef_win32.hc  loop.hc  main.rs  printf.hc  self_contained.hc  string.hc  windows_inert.hc
hcc/tests/sync/: atomics.hc  condvar.hc  contended.hc  main.rs  rwlock.hc
hcc/tests/thread/: exceptions.hc  main.rs  squares.hc  thread_exit.hc  tls.hc
tests/macros/: Cargo.toml
tests/macros/src/: lib.rs
(+2601 files in other folders)
