# A tiny proc-macro crate that generates the integration/comparison test functions by
# globbing `tests/cases/**/*.hc` and `tests/bench/*` at compile time — replacing the former
# `build.rs` + `tools/gen_cases.py`. Used only as a dev-dependency of `solomon`.
[package]
name = "hcc-test-macros"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
proc-macro = true
